index.css
/* ... */
#progress {
  width: 270px;
  height: 18px;
  /* margin-top: 2%; */
  margin-bottom: 3%;
  /* color: rgba(3, 19, 72, 0.7); */
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 30px;
}

#percent {
  width: 100%;
  height: 100%;
  background: rgba(3, 19, 72);
  font-weight: lighter;
  color: rgb(255, 255, 255);
  text-align: center;
  line-height: 18px;
  border-radius: 30px;
}

#SKILL {
  display: block;
  /* margin-right: 15%; */
  margin-top: 2%;
  /* margin-left: 25%; */
}

#service {
  width: 90%;
  min-height: 20%;
  color: white;
  text-align: center;
  margin: 5% auto;
  margin-top: 10%;
  border-radius: 5px;
  padding: 10% 0% 4% 0%;
  /* background-color: rgba(3, 19, 72, 0.7); */
}

#bigHeader {
  color: rgb(255, 255, 255);
  padding: 0%;
  letter-spacing: 2px;
  margin: 3px;
  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
  text-transform: uppercase;
}

#headerWord {
  letter-spacing: 2px;
  margin-bottom: 5px;
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
}

#line {
  width: 40px;
  height: 5px;
  margin: auto;
  background-color: rgba(255, 255, 255);
}

#offer1 {
  display: inline-block;
  margin: 4% 2%;
  color: rgba(3, 19, 72, 0.7);
  box-shadow: inset -1px -1px 3px rgba(0, 0, 0, 0.4),
              inset 2px 2px 5px rgba(0, 0, 0, 0.4);
  background-color: #fff;
  padding: 3%;
  border-radius: 10px;
  transition: 0.4s ease;
  min-height: 30%;
  cursor: pointer;
  width: 25%;
  /* max-height: 39vh; */
}

#offer1 img{
  width: 90px;
}

#services {
  font-family: Arial, Helvetica, sans-serif;
  color: rgb(0, 2, 63);
  letter-spacing: 1.5px;
}
#word2 {
  /* color: black; */
  font-family: Calibri;
  font-weight: bold;
}

#contact {
  padding: 5% 0% 5% 0%;
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: center;
  margin: 0% 1%;
  background: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url('pexels-pixabay-531321.jpg');
  flex-direction: column;
  background-size: cover;
  color: rgb(255, 255, 255);
}

#content{
  text-align: center;
  text-transform: uppercase;
  padding:0 2%;
  border-bottom: 2px dotted #fff;
  font-size: 20px;
  font-family: 'arial black';
}

#contactContainer{
  width: 100%;
  justify-content: center;
  align-items: center;
  display: flex;
}
#contactContainer .contactInfo{
  width: 50%;
  display: flex;
  margin-right: 10%;
  flex-direction: column;
}

#contactContainer .contactInfo .box{
  display: flex;
  padding: 2% 3%;
}

#contactContainer .contactInfo .box .icon{
  justify-content: center;
  align-items: center;
  min-width: 40px;
  height: 40px;
  font-size: 25px;
  margin-right: 3%;
  display: flex;
  border-radius: 50px;
  color: #333;
  background: #fff;
}

#contactContainer .contactInfo .box .text{
  display: flex;
  flex-direction: column;
  font-weight: 300;
  font-size: 16px;
}

#contactContainer .contactInfo .box .text h3{
  font-weight: 500;
  color: #00bcb4;
}

.contactForm{
  width: 100%;
  border-radius: 5px;
  background-color: #fff;
  color: #333;
  padding: 10%;
}
.contactForm h2{
  font-size: 30px;
  color: #333;
  font-weight: 500;
}

.contactForm .inputBox{
  width: 100%;
  margin-top: 5px;
  margin-bottom: 5px;
}

.contactForm .inputBox input,
.contactForm .inputBox textarea{
  width: 100%;
  outline: none;
  font-size: 10px;
  border: none;
  border-bottom: 2px solid #333;
}
.contactForm .inputBox textarea{
  resize: none;
  height: 22px;
}

.contactForm .inputBox input[type="submit"]{
  background:  #00bcb4; 
  color: #091921;
  border-bottom: none;
  border-radius: 5px;
  padding: 2%;
  width: 20%;
}

#sendMeMessage {
  font-family: "Roboto", Arial, Helvetica, sans-serif;
}


label {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  /* margin-left: 2%; */
  font-size: 14px;
}

.sub:hover {
  color: rgb(255, 255, 255);
  background: rgba(3, 19, 72, 0.7);
  border: 1px solid #ffffffb3;
}

.social {
  /* position: absolute; */
  list-style-type: none;
  margin-left: 43%;
  display: inline-flex;
}

.social li a {
  background-color: #f1f1f1;
  display: block;
  text-align: center;
  margin: 10px 3px;
  border-radius: 50%;
  padding: 5px;
  text-decoration: none;
  width: 34px;
  height: 34px;
  font-size: 18px;
  background: linear-gradient(0deg, #ddd, #fff);
  transition: 0.4s;
  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.4);
}

.social li a:hover {
  width: 30px;
  padding: 3px;
  height: 30px;
}

.social li a .fa:hover {
  line-height: calc(30px - 3px);
}

.social li a .fa {
  width: 100%;
  background: linear-gradient(0deg, rgb(255, 255, 255), #ddd);
  height: 100%;
  background-color: #ff0;
  border-radius: 50%;
  line-height: calc(34px - 5px);
  color: #262626;
  transition: 0.9s;
}

.social li a:hover {
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
}
.social li:nth-child(1) a:hover .fa {
  color: #3b5998;
}

.social li:nth-child(2) a:hover .fa {
  color: #00aced;
}

.social li:nth-child(3) a:hover .fa {
  color: #007bb6;
}

.social li:nth-child(4) a:hover .fa {
  color: #bc2a8d;
}

.social li:nth-child(5) a:hover .fa {
  color: purple;
}

#footer {
  width: 100%;
  color: #fff;
  font-size: 19px;
  text-align: center;
  border-top: 2px solid #fff;
  padding: 1%;
  margin-top: 1%;
}

#copyright,
#copyright > i {
  font-family: sans-serif;
  font-weight: lighter;
}
/* ... */

